# notion-auto-squash-rankings

./: .gitignore  Readme.md  pyproject.toml
notion_auto_squash_rankings/: __init__.py  __main__.py  argument_utils.py
notion_auto_squash_rankings/notion_writers/: FrenchRankWriter.py  NotionAPIException.py  NotionWriter.py  WorldRankWriter.py  __init__.py  utils.py
notion_auto_squash_rankings/rank_scrapers/: FrenchRankScraper.py  RankScraper.py  WorldRankScraper.py  __init__.py  utils.py
